manifests/echo/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: echo
  name: echo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: echo
  sessionAffinity: None
  type: ClusterIP
